--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -304,20 +304,20 @@ jobs:
         run: tests/all-up-test.sh ERC721_HAPPY_PATH
         env:
           NO_IMAGE_BUILD: True
-  upgrade_test:
-    runs-on: ubuntu-latest
-    needs: happy-path-geth
-    steps:
-      - uses: actions/checkout@v2
-      - uses: jpribyl/action-docker-layer-caching@v0.1.1
-        with:
-          key: integration-test-cache-{hash}
-          restore-keys: |
-            integration-test-cache-
-      - name: Test Pleiades upgrade
-        run: tests/run-upgrade-test.sh v1.6.5
-        env:
-          NO_IMAGE_BUILD: True
+#  upgrade_test:
+#    runs-on: ubuntu-latest
+#    needs: happy-path-geth
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: jpribyl/action-docker-layer-caching@v0.1.1
+#        with:
+#          key: integration-test-cache-{hash}
+#          restore-keys: |
+#            integration-test-cache-
+#      - name: Test Pleiades upgrade
+#        run: tests/run-upgrade-test.sh v1.6.5
+#        env:
+#          NO_IMAGE_BUILD: True
   ibc_auto_forward_test:
     runs-on: ubuntu-latest
     needs: happy-path-geth
